--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,7 +26,7 @@ jobs:
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         EXTERNAL_REPOSITORY: postliminal/ece202-fall21-project
-        PUBLISH_BRANCH: main
+        PUBLISH_BRANCH: gh-pages
         PUBLISH_DIR: ./public
       with:
         emptyCommits: false
