--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: http://example.org/
+baseURL: //postliminal.github.io/ece202-fall21-project/
 languageCode: en-us
 title: My New Hugo Site
 theme: "PaperMod"
