--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: //postliminal.github.io/ece202-fall21-project/
+baseURL: //postliminal.github.io/ecem202a_project/
 languageCode: en-us
 title: "LOCALIZZACIONE"
 theme: "PaperMod"
